# mcp_tools

./: .env  .gitignore  Makefile  advanced_rag_server.py  client.py  hr_client.py  http_server.py  main.py  mcp_prompts.py  pyproject.toml  requirements.txt  test_prompt.py
.continue/mcpServers/: new-mcp-server.yaml
advanced_rag_tools/: helpers.py  pandas_tool.py  rag_tool.py  sql_tool.py  state.py
client/: client.py  streamlit_ui.py
data/: resume.txt
gemini_mcp/: main.py  mcp_config.json
hr_server/: Makefile  llm.py  main.py  mcp_server.py  mcp_tools.py
research/: resume.txt  trials.ipynb
src/: prompts.yaml
utils/: finance_tool.py  hr_tool.py
