[project]
name = "mcp-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "fastmcp>=2.12.4",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "pandas>=2.3.3",
    "pylint>=3.3.9",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "yfinance>=0.2.66",
]
