[project]
name = "mcp-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "fastmcp>=2.12.4",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.8",
    "matplotlib>=3.10.7",
    "mcp[cli]>=1.16.0",
    "pandas>=2.3.3",
    "pandasql>=0.7.3",
    "pylint>=3.3.9",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "yfinance>=0.2.66",
]
